--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bcryptjs": "^3.0.3",
     "dotenv": "^17.2.3",
+    "escape-html": "^1.0.3",
     "express": "^5.2.1",
     "express-validator": "^7.3.1",
     "jsonwebtoken": "^9.0.3",
@@ -20,5 +21,11 @@
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
-  }
+  },
+  "scripts": {
+  "start": "node src/server.js",
+  "dev": "nodemon src/server.js",
+  "audit": "npm audit"
+}
+
 }
